--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: sans-serif;
 }
-.not-answer {
-    background-color: blue;
+select {
+    font-size: 18px;
+    padding: 2px;
 }
